# RobotikProjekt3

./: README.md
Aruco/: imageProcessorAruco.py
ArucoDetection/: arucoGeerator.py
KalmanFilter/: Greifpunkt.py  ObjectDetection.py  ObjectDetector.py  PositionPredicition.py  TestObjectDetection.py  imageProcessorAruco.py  kalmanfilter.py  tracker.py
Main/: Position.py
PickRobotRosSerial/: README.md  platformio.ini
PlotbotEncoderRosSerial/src/: main.cpp
Prototype Marius/: FeatureExtract.py  Förderbanderkennung.py  GeschwindigkeitsBerechnung.py  Greifpunkt.py  Objekterkennung 2.py  Objekterkennung 3.py  Objekterkennung.py  PrototypeEinhorn.py  SVM.py  SVMTest.py  SampleData.py  SupportVectorMachine.py  TXTEditor.py  TxtToCsvConverter.py  Vorverarbeitung.py  test.py
Test/: Test_Objekterkennung  Test_Objekterkennung_Aktuell  imageProcessor.py  image_processor_node.py  video_publisher_node.py
TrackingandImageProcessor/: ObjectTrackig.py  ObjectTrackingID.py  TestTracking.py  imageProcessor.py  tracker.py
Uni-Tests/: test_resize_frame_imageTransformer.py  test_runner.py  test_transform_to_birds_eye_view_imageTransformer.py
detection_node/: package.xml
gripper_node/: setup.py
robot_startup/: CMakeLists.txt
ros2_workspace/install/: local_setup.sh  setup.sh
ros2_workspace/src/robot_startup/: package.xml
simple_controller/: package.xml
simple_controller/simple_controller/: simple_controller.py
src/PlotbotEncoderRosSerial/: .gitmodules
src/detection_node/: setup.py
src/ro45_ros2_pickrobot_serial/: README.md
tutorial_interfaces/: CMakeLists.txt
(+108 files in other folders)
