<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_startup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mbird@todo.todo">mbird</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  
  <exec_depend>video_publisher_node</exec_depend>
  <exec_depend>image_processor_node</exec_depend>
  <exec_depend>detection_node</exec_depend>
  <exec_depend>simple_controller</exec_depend>
  <exec_depend>gripper_node</exec_depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
